Revise research interests section in index.html
Updated research interests to reflect new focus areas and methodologies.

--- a/index.html
+++ b/index.html
@@ -161,29 +161,26 @@
               Before pursuing my Ph.D., I obtained a B.Sc. in Applied Mathematics from Beijing Normal University 
               (Zhuhai Campus) and an M.A. in Applied Psychology from City University of Macao.
             </p>
-
-            <h2>Research Interests</h2>
-            <ul>
-              <li>
-                Structural equation modeling (SEM) of employment-related competencies, career success and AI-era outcomes 
-                among university students (mainly undergraduates) and research-track master/PhD students, 
-                based on demographic and survey data (N≈400–600) as baseline models.
-              </li>
-              <li>
-                Machine-learning and NLP-based text mining of recruitment texts and open-ended questionnaire responses 
-                to extract competence elements, build predictive models (classification and regression), 
-                and design human-like data augmentation pipelines.
-              </li>
-              <li>
-                Career and job recommendation systems: leveraging survey, behavioral and labor-market data to 
-                fine-tune models and develop career recommendation / counseling agents for students.
-              </li>
-              <li>
-                More broadly, NLP, large language models (LLMs) and big-data methods for labor-market analytics 
-                and social science research.
-              </li>
-            </ul>
-
+          <h2>Research Interests</h2>
+          <ul>
+            <li>
+              Multi-source, multi-method psychometrics of employment-related competencies, career success
+              and AI-era work outcomes among university students and research-track master/PhD students.
+            </li>
+            <li>
+              Machine-learning and NLP-based text mining of recruitment texts and open-ended questionnaire
+              responses to extract competence elements, build predictive models (classification and regression),
+              and design human-like data augmentation pipelines.
+            </li>
+            <li>
+              Career and job recommendation systems: leveraging survey, behavioral, and labor-market data to
+              fine-tune models and develop career recommendation/counseling agents for students.
+            </li>
+            <li>
+              More broadly, NLP, large language models (LLMs), and big-data methods for labor-market analytics
+              and social science research.
+            </li>
+          </ul>
             <h2>Education</h2>
             <ul>
               <li><strong>Ph.D. in Data Science</strong>, City University of Hong Kong, 2024&nbsp;– present</li>
