Correct supervisor's department in index.html

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
           <div class="content">
             <p>
               Hi there! I am currently a joint Ph.D. student in Data Science at the 
-              School of Data Science, City University of Hong Kong (Supervisor: 
+              School of Computer Science, City University of Hong Kong (Supervisor: 
               <a href="https://zhaoxyai.github.io/" target="_blank">Professor Xiangyu Zhao</a>), 
               and in Human Resource Management at the School of Labor and Human Resources, 
               Renmin University of China (Supervisor: 
