--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             <h2>Education</h2>
             <ul>
               <li><strong>Ph.D. in Data Science</strong>, City University of Hong Kong, 2024&nbsp;– present</li>
-              <li><strong>Ph.D. in Human Resource Management</strong>, Renmin University of China, 2020&nbsp;– present</li>
+              <li><strong>Ph.D. in Human Resource Management</strong>, Renmin University of China</li>
               <li><strong>M.A. in Applied Psychology</strong>, City University of Macao, 2013&nbsp;– 2016</li>
               <li><strong>B.Sc. in Applied Mathematics</strong>, Beijing Normal University (Zhuhai Campus), 2009&nbsp;– 2013</li>
             </ul>
