--- a/index.html
+++ b/index.html
@@ -158,8 +158,6 @@
               the highest academic title in humanities and social sciences in mainland China).
               I am also affiliated with the 
               <a href="https://aml-cityu.github.io/" target="_blank">Applied Machine Learning Lab (AML)</a> at CityU.
-              Before pursuing my Ph.D., I obtained a B.Sc. in Applied Mathematics from Beijing Normal University 
-              (Zhuhai Campus) and an M.A. in Applied Psychology from City University of Macao.
             </p>
           <h2>Research Interests</h2>
           <ul>
@@ -185,8 +183,8 @@
             <ul>
               <li><strong>Ph.D. in Data Science</strong>, City University of Hong Kong, 2024&nbsp;– present</li>
               <li><strong>Ph.D. in Human Resource Management</strong>, Renmin University of China</li>
-              <li><strong>M.A. in Applied Psychology</strong>, City University of Macao, 2013&nbsp;– 2016</li>
-              <li><strong>B.Sc. in Applied Mathematics</strong>, Beijing Normal University (Zhuhai Campus), 2009&nbsp;– 2013</li>
+              <li><strong>M.A. in Applied Psychology</strong>, City University of Macao</li>
+              <li><strong>B.Sc. in Applied Mathematics</strong>, Beijing Normal University (Zhuhai Campus)</li>
             </ul>
 
             <h2>Selected Publications</h2>
