Fix HTML formatting and improve text clarity

--- a/index.html
+++ b/index.html
@@ -155,15 +155,15 @@
               Renmin University of China (Supervisor: 
               <a href="http://slhr.ruc.edu.cn/En/Teacher_Home/ZHOU_Wenxia/index.htm" target="_blank">
               Professor Wenxia Zhou</a>, Distinguished Professor and Second-rank Professor—
-              the highest academic title in humanities and social sciences in mainland China).
-              I am also affiliated with the 
+              The highest academic title in the humanities and social sciences in mainland China.
+    
               <a href="https://aml-cityu.github.io/" target="_blank">Applied Machine Learning Lab (AML)</a> at CityU.
             </p>
           <h2>Research Interests</h2>
           <ul>
             <li>
               Multi-source, multi-method psychometrics of employment-related competencies, career success
-              and AI-era work outcomes among university students and research-track master/PhD students.
+              and AI-era work outcomes among university students and research-track master's/PhD students.
             </li>
             <li>
               Machine-learning and NLP-based text mining of recruitment texts and open-ended questionnaire
