--- a/index.html
+++ b/index.html
@@ -155,9 +155,7 @@
               Renmin University of China (Supervisor: 
               <a href="http://slhr.ruc.edu.cn/En/Teacher_Home/ZHOU_Wenxia/index.htm" target="_blank">
               Professor Wenxia Zhou</a>, Distinguished Professor and Second-rank Professor—
-              The highest academic title in the humanities and social sciences in mainland China.
-    
-              <a href="https://aml-cityu.github.io/" target="_blank">Applied Machine Learning Lab (AML)</a> at CityU.
+              The highest academic title in the humanities and social sciences in mainland China, and I am also affiliated with the <a href="https://aml-cityu.github.io/" target="_blank">Applied Machine Learning Lab (AML) at CityU.
             </p>
           <h2>Research Interests</h2>
           <ul>
