Fix punctuation and phrasing in index.html

--- a/index.html
+++ b/index.html
@@ -200,13 +200,13 @@
               </li>
               <li>
                 Zhou, W., Pan, Z., <strong>Li, G.</strong>, et al. (2023). 
-                Handbook of Career Research, Teaching and Counseling Tools.
+                Handbook of Career Research, Teaching, and Counseling Tools.
               </li>
               <li>
                 Zhao, Y., Cao, W., Yuan, Z., Rong, X., <strong>Li, G.</strong> (2018). 
                 Research on the differences between brand image presentation and positioning of news media: 
                 Taking Huawei and Xiaomi as examples. 
-                Annual Conference of Chinese Society of Journalism and History.
+                Annual Conference of the Chinese Society of Journalism and History.
               </li>
             </ul>
 
@@ -234,7 +234,7 @@
               <li>
                 <strong>Teaching Assistant</strong>, School of Labor and Human Resources, Renmin University of China, 2020/09&nbsp;– present<br>
                 Involved in multiple research and consulting projects on vocational skill improvement, freelance labor, 
-                civil service management systems, and AI-era career success mechanisms; responsible mainly for data analysis and reporting.
+                Civil service management systems and AI-era career success mechanisms; responsible mainly for data analysis and reporting.
               </li>
               <li>
                 <strong>Visiting Scholar</strong>, Scott College of Business, Indiana State University, 2022/09&nbsp;– 2024/04
