--- a/index.html
+++ b/index.html
@@ -156,7 +156,8 @@
               <a href="http://slhr.ruc.edu.cn/En/Teacher_Home/ZHOU_Wenxia/index.htm" target="_blank">
               Professor Wenxia Zhou</a>, Distinguished Professor and Second-rank Professor—
               The highest academic title in the humanities and social sciences in mainland China,
-              and I am also affiliated with the <a href="https://aml-cityu.github.io/" target="_blank">Applied Machine Learning Lab (AML)</a> at CityU of Hong Kong.
+              and I am also affiliated with the 
+              <a href="https://aml-cityu.github.io/" target="_blank">Applied Machine Learning Lab (AML)</a> at CityU of Hong Kong.
             </p>
           <h2>Research Interests</h2>
           <ul>
